--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
@@ -24,6 +25,20 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    publishing {
+        publications {
+            release(MavenPublication) {
+                groupId = 'io.jitpack'
+                artifactId = 'library'
+                version = '1.0'
+
+                afterEvaluate {
+                    from components.release
+                }
+            }
+        }
     }
 }
 
