--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,25 +20,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'consumer-rules.pro'
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    publishing {
-        publications {
-            release(MavenPublication) {
-                groupId = 'io.jitpack'
-                artifactId = 'library'
-                version = '1.0'
-
-                afterEvaluate {
-                    from components.release
-                }
-            }
-        }
     }
 }
 
@@ -50,4 +37,20 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.techlibtools'
+            artifactId = 'com-techlibtools-drawview'
+            version = '1.0'
+            pom {
+                description = 'First release'
+            }
+        }
+    }
+    repositories {
+        mavenLocal()
+    }
 }
