--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,5 @@
     <artifactId>com-techlibtools-drawview</artifactId>
     <version>1.1</version>
     <packaging>pom</packaging>
-    <description>First version release</description>
+    <description>Second version release</description>
 </project>
