--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,7 +1,6 @@
 jdk:
   - openjdk17
-before_install:
-  - ./scripts/prepareJitpackEnvironment.sh
 install:
+  - ./gradlew assembleRelease
   - FILE="-Dfile=com-techlibtools-drawview.aar"
   - mvn install:install-file $FILE -DgroupId=com.github.techlibtools -DartifactId=com-techlibtools-drawview -Dversion=1.1 -Dpackaging=aar -DgeneratePom=true
