--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 5
-        versionName "1.5"
+        versionCode 8
+        versionName "1.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -42,9 +42,9 @@ publishing {
         maven(MavenPublication) {
             groupId = 'com.github.techlibtools'
             artifactId = 'com-techlibtools-drawview'
-            version = '1.5'
+            version = '1.8'
             pom {
-                description = 'fifth release'
+                description = 'eight release with sdk 34'
             }
         }
     }
