added jitpack config file for java config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 8
-        versionName "1.8"
+        versionName "1.9"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -42,9 +42,9 @@ publishing {
         maven(MavenPublication) {
             groupId = 'com.github.techlibtools'
             artifactId = 'com-techlibtools-drawview'
-            version = '1.8'
+            version = '1.9'
             pom {
-                description = 'eight release with sdk 34'
+                description = '1.9 version'
             }
         }
     }
